<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/customtoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:elevation="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:text="@string/plu"
            android:textStyle="bold"
            android:layout_weight="80"
            android:padding="20dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="0dp"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@color/black"
            android:padding="20dp"
            android:gravity="center"
            android:layout_weight="20"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <View style="@style/divider_lines" />



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:elevation="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:text="@string/chicken_curry_cut"
                    android:textStyle="bold"
                    android:layout_weight="80"
                    android:padding="20dp"
                    android:textSize="25sp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


    <View style="@style/divider_lines" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="75dp">

                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/tare"
                        android:textStyle="bold"
                        android:layout_weight="80"
                        android:padding="20dp"
                        android:textSize="25sp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:background="@color/black"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/_5"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:background="@color/black"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:paddingTop="20dp"
                            android:gravity="center"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="g"
                            android:textColor="@color/white"
                            android:background="@color/black"
                            android:gravity="end"
                            android:textSize="16dp"
                            android:layout_gravity="end|top"
                            android:paddingEnd="2dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>


                <View style="@style/divider_lines" />





        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:elevation="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:text="MRP"
                android:textStyle="bold"
                android:layout_weight="70"
                android:padding="20dp"
                android:textSize="25sp"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="0dp"
                android:text=""
                android:id="@+id/textView1"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:background="@color/black"
                android:padding="20dp"
                android:gravity="center"
                android:layout_weight="30"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View style="@style/divider_lines" />



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="75dp">

            <TextView
                android:layout_width="0dp"
                android:text="@string/weight"
                android:textStyle="bold"
                android:layout_weight="80"
                android:padding="20dp"
                android:textSize="25sp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:background="@color/black"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:background="@color/black"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="g"
                    android:textColor="@color/white"
                    android:background="@color/black"
                    android:gravity="end"
                    android:textSize="16dp"
                    android:layout_gravity="end|top"
                    android:paddingEnd="2dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


        <View style="@style/divider_lines" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:elevation="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:text="@string/price"
                android:textStyle="bold"
                android:layout_weight="70"
                android:padding="20dp"
                android:textSize="25sp"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="0dp"
                android:text=""
                android:id="@+id/PriceTextView"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:background="@color/black"
                android:padding="20dp"
                android:gravity="center"
                android:layout_weight="30"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View style="@style/divider_lines" />

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">


            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="1dp"
                android:background="@color/black"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_height="45dp"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:src="@drawable/baseline_play_arrow_24"
                android:layout_height="45dp"/>



        </LinearLayout>


</LinearLayout>

